--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.sage</groupId>
 	<artifactId>sage-base</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	
+
 	<properties>
 		<java.version>11</java.version>
 		<maven.compile.plugin.version>3.8.0</maven.compile.plugin.version>
@@ -16,7 +17,7 @@
 		<slf4j.version>1.7.26</slf4j.version>
 		<log4j2.version>2.11.1</log4j2.version>
 	</properties>
-	
+
 	<modules>
 		<module>common</module>
 		<module>pod</module>
@@ -61,6 +62,11 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>org.dungba</groupId>
+				<artifactId>joo-promise4j</artifactId>
+				<version>1.4.0</version>
+			</dependency>
+			<dependency>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
 				<version>${lombok.version}</version>
@@ -99,6 +105,10 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.dungba</groupId>
+			<artifactId>joo-promise4j</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
